# amplenote-cache-mcp

./: .gitignore  README.md  REQUIREMENTS.md  SCHEMA.md  devenv.nix  flake.nix  pyproject.toml  start.sh
app/: __main__.py  config.py  container.py  database.py  mcp_app.py  models.py  notes.py  tasks.py
app/models/: __init__.py  note_models.py  task_attrs.py  task_content.py  task_models.py
tests/: __init__.py  conftest.py  test_database.py  test_notes.py  test_tasks.py
