[tool.poetry]
name = "python-project"
version = "0.1.0"
description = "Sample python project"
authors = ["Michael Wright"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"
httpx= "^0.27.0"
fastmcp = "^2.1.0"
pydantic-settings = "^2.12.0"
dependency-injector = "^4.42.0"

[tool.poetry.group.dev.dependencies]
pytest = "7.1.1"
pytest-asyncio = "0.19.0"
coverage = "6.4.1"
faker = "^18.4.0"
ruff = "^0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
exclude = [
    "migrations",
    "__pycache__",
    "deployment",
    "configs",
    "bin",
    "docker",
    ".github",
    ".venv",
]

[tool.ruff.lint]
# Enable isort
select = ["I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
lines-after-imports = 2
lines-between-types = 1

